--- a/demo_project/templates/registration/login.html
+++ b/demo_project/templates/registration/login.html
@@ -11,36 +11,40 @@
   {% if user.is_authenticated %}
     <p>Your account doesn't have access to this page. To proceed,
     please login with an account that has access.</p>
-  {% else %}
-    <br>
-    <p>Login Form:</p>
   {% endif %}
 {% endif %}
+<div class="container-fluid">
+  <div class="card">
+    <div class="card-header">
+      <h4>Login Form</h4>
+    </div>
+    <div class="card-body">
+      <form method="post" action="{% url 'login' %}">
+        {% csrf_token %}
+        <div class="form-group">
+          <label>{{ form.username.label_tag }}</label>
+          <input type="text" class="form-control" aria-describedby="" placeholder="Username" name="username">
+        </div>
+        <div class="form-group">
+          <label>{{ form.password.label_tag }}</label>
+          <input type="password" class="form-control" placeholder="Password" name="password">
+        </div>
+        <button type="submit" class="btn btn-outline-info mb-2">Login</button>
+        <input type="hidden" name="next" value="{{ next }}" />
+      </form>
+    </div>
+    <hr>
+    <div class="card-header">
+      <h4>Login with GOOGLE</h4>
+    </div>
+    <div class="card-body">
+      <a href="{% url 'social:begin' 'google-oauth2' %}"><img class="" src="{% static 'images/google.png' %}" alt="Login with Google" width=200px></a>
+    </div>
+  </div>
+</div>
 
-<form method="post" action="{% url 'login' %}">
-{% csrf_token %}
-<table>
-
-<tr>
-  <td>{{ form.username.label_tag }}</td>
-  <td>{{ form.username }}</td>
-</tr>
-
-<tr>
-  <td>{{ form.password.label_tag }}</td>
-  <td>{{ form.password }}</td>
-</tr>
-</table>
-
-<input type="submit" value="login" />
-<input type="hidden" name="next" value="{{ next }}" />
-</form>
 
 <!-- {# Assumes you setup the password_reset view in your URLconf #}
 <p><a href="{% url 'password_reset' %}">Lost password?</a></p> -->
-
-<br>
-<p><strong>-- OR --</strong></p>
-<a href="{% url 'social:begin' 'google-oauth2' %}"><img src="{% static 'images/google.png' %}" alt="Login with Google" width=200px></a><br>
 
 {% endblock %}
