--- a/demo_project/templates/registration/login.html
+++ b/demo_project/templates/registration/login.html
@@ -1,44 +1,40 @@
-{% extends "base.html" %}
-{% load staticfiles %}
-
-{% block content %}
-
-{% if form.errors %}
-  <p>Your username and password didn't match. Please try again.</p>
-{% endif %}
-
-{% if next %}
-  {% if user.is_authenticated %}
-    <p>Your account doesn't have access to this page. To proceed,
-    please login with an account that has access.</p>
-  {% endif %}
-{% endif %}
-<div class="container-fluid">
-  <div class="card">
-    <div class="card-header">
-      <h4>Login Form</h4>
-    </div>
-    <div class="card-body">
-      <form method="post" action="{% url 'login' %}">
-        {% csrf_token %}
-        <div class="form-group">
-          <label>{{ form.username.label_tag }}</label>
-          <input type="text" class="form-control" aria-describedby="" placeholder="Username" name="username">
+{% extends "base.html" %} {% load staticfiles %} {% block content %} {% if form.errors %}
+<p>Your username and password didn't match. Please try again.</p>
+{% endif %} {% if next %} {% if user.is_authenticated %}
+<p>Your account doesn't have access to this page. To proceed, please login with an account that has access.</p>
+{% endif %} {% endif %}
+<div class="container">
+  <div class="row justify-content-md-center">
+    <div class="col-6">
+      <div class="card">
+        <div class="card-header">
+          <h4>Login</h4>
         </div>
-        <div class="form-group">
-          <label>{{ form.password.label_tag }}</label>
-          <input type="password" class="form-control" placeholder="Password" name="password">
+        <div class="card-body">
+          <form method="post" action="{% url 'login' %}">
+            {% csrf_token %}
+            <div class="form-group">
+              <label>{{ form.username.label_tag }}</label>
+              <input type="text" class="form-control" aria-describedby="" placeholder="Username" name="username">
+            </div>
+            <div class="form-group">
+              <label>{{ form.password.label_tag }}</label>
+              <input type="password" class="form-control" placeholder="Password" name="password">
+            </div>
+            <button type="submit" class="btn btn-outline-info mb-2">Login</button>
+            <input type="hidden" name="next" value="{{ next }}" />
+          </form>
         </div>
-        <button type="submit" class="btn btn-outline-info mb-2">Login</button>
-        <input type="hidden" name="next" value="{{ next }}" />
-      </form>
-    </div>
-    <hr>
-    <div class="card-header">
-      <h4>Login with GOOGLE</h4>
-    </div>
-    <div class="card-body">
-      <a href="{% url 'social:begin' 'google-oauth2' %}"><img class="" src="{% static 'images/google.png' %}" alt="Login with Google" width=200px></a>
+        <hr>
+        <div class="card-header">
+          <h4>Login with GOOGLE</h4>
+        </div>
+        <div class="card-body">
+          <a href="{% url 'social:begin' 'google-oauth2' %}">
+            <img class="" src="{% static 'images/google.png' %}" alt="Login with Google" width=200px>
+          </a>
+        </div>
+      </div>
     </div>
   </div>
 </div>
