--- a/demo_project/templates/registration/login.html
+++ b/demo_project/templates/registration/login.html
@@ -6,33 +6,28 @@
 <div class="container">
   <div class="row justify-content-md-center">
     <div class="col-6">
-      <div class="card">
+      <div class="card mt-4">
         <div class="card-header">
-          <h4>Login</h4>
+          <h4>Login with username</h4>
         </div>
         <div class="card-body">
           <form method="post" action="{% url 'login' %}">
             {% csrf_token %}
             <div class="form-group">
-              <label>{{ form.username.label_tag }}</label>
-              <input type="text" class="form-control" aria-describedby="" placeholder="Username" name="username">
+              <input type="text" class="form-control form-control-lg" aria-describedby="" placeholder="Username" name="username">
             </div>
             <div class="form-group">
-              <label>{{ form.password.label_tag }}</label>
-              <input type="password" class="form-control" placeholder="Password" name="password">
+              <input type="password" class="form-control form-control-lg" placeholder="Password" name="password">
             </div>
-            <button type="submit" class="btn btn-outline-info mb-2">Login</button>
+            <button type="submit" class="btn btn-primary btn-lg btn-block">Login</button>
             <input type="hidden" name="next" value="{{ next }}" />
           </form>
-        </div>
-        <hr>
-        <div class="card-header">
-          <h4>Login with GOOGLE</h4>
-        </div>
-        <div class="card-body">
-          <a href="{% url 'social:begin' 'google-oauth2' %}">
-            <img class="" src="{% static 'images/google.png' %}" alt="Login with Google" width=200px>
-          </a>
+          <h4 class="mt-4 mb-4 center text-center">OR</h4>
+          <div class="mx-auto" style="width: 200px;">
+            <a class="mx-auto" href="{% url 'social:begin' 'google-oauth2' %}">
+              <img class="mx-auto" src="{% static 'images/google.png' %}" alt="Login with Google" width=200px>
+            </a>
+          </div>
         </div>
       </div>
     </div>
